# ta-flnks-pe

./: .gitignore  .mypy.ini  .pre-commit-config.yaml  README.md  docker-compose.yaml  pyproject.toml  tox.ini
.github/workflows/: build_docker.yaml  check.yaml
app/: main.py
app/api/routes/: endpoints.py  news.py
app/dependencies/: redis.py
docker/: .dockerignore  Dockerfile
services/: deploy_lambda.py  push_docker_image.py  push_ecr.py  run.py
tests/: test_hacker_news.py
