[project]
name = "ta-flnks-pe"
version = "0.1.0"
description = ""
authors = [
    {name = "Renato Ramos Silva",email = "renatoramossilva@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
uvicorn = "^0.34.2"
fastapi = "^0.115.12"
playwright = "^1.52.0"
bindl-lib = {git = "https://github.com/renatoramossilva/bindl-lib.git", rev = "1.1.0"}
